Updated to tzdata version 2006a (http://article.gmane.org/gmane.comp.time.tz/738). build_tz_classes rake task now handles running svn add and svn delete as new timezones and countries are added and old ones are removed.

--- a/tzinfo/Rakefile
+++ b/tzinfo/Rakefile
@@ -2,7 +2,7 @@
 #
 # rake test - Runs all test cases.
 # rake package - Runs test cases and builds packages for distribution.
-# rake rdoc - Builds API documentation id doc dir.
+# rake rdoc - Builds API documentation in doc dir.
 # rake build_tz_classes - Builds Timezone and Country classes. Expects to find
 #   source data in ../data.
 # rake build_tz_class zone=Zone/Name - Builds single Timezone class. Expects to
@@ -12,6 +12,7 @@ require 'rake'
 require 'rake/testtask'
 require 'rake/rdoctask'
 require 'rake/gempackagetask'
+require 'fileutils'
 
 PKG_VERSION = "0.1.1"
 PKG_FILES = FileList[
@@ -20,6 +21,8 @@ PKG_FILES = FileList[
   'lib/**/*',
   'test/**/*'
 ]
+
+BUILD_TZ_CLASSES_DIR = 'lib/tzinfo.build_tz_classes'
 
 SPEC = Gem::Specification.new do |s|
   s.name = "tzinfo"
@@ -62,8 +65,86 @@ end
 
 task :build_tz_classes do
   require 'lib/tzinfo/tzdataparser'
-  p = TZInfo::TZDataParser.new('../data', 'lib/tzinfo')
-  p.execute
+  
+  FileUtils.mkdir_p(BUILD_TZ_CLASSES_DIR)
+  begin  
+    p = TZInfo::TZDataParser.new('../data', BUILD_TZ_CLASSES_DIR)
+    p.execute
+    
+    ['countries', 'definitions'].each {|dir|
+      sync_svn("#{BUILD_TZ_CLASSES_DIR}/#{dir}", "lib/tzinfo/#{dir}")
+    }        
+  ensure
+    FileUtils.rm_rf(BUILD_TZ_CLASSES_DIR)
+  end
+end
+
+def sync_svn(source_dir, target_dir)
+  puts "SVN Sync from #{source_dir} to #{target_dir}"
+
+  # Assumes a directory will never turn into a file and vice-versa
+  # (files will all end in .rb, directories won't).
+  # SVN wouldn't allow the change in a single commit anyway.
+
+  source_entries, target_entries = [source_dir, target_dir].collect {|dir|
+    Dir.entries(dir).delete_if {|entry| entry =~ /^\.(\.?|svn)$/}.sort
+  }
+  
+  until source_entries.empty? || target_entries.empty?          
+    if source_entries.last == target_entries.last      
+      source_file = "#{source_dir}/#{source_entries.last}"
+      target_file = "#{target_dir}/#{target_entries.last}"
+    
+      if File.directory?(source_file)
+        sync_svn(source_file, target_file)
+      else
+        FileUtils.cp(source_file, target_file)
+      end     
+    
+      source_entries.pop
+      target_entries.pop
+    elsif source_entries.last < target_entries.last
+      sync_svn_only_in_target(target_dir, target_entries)
+    else      
+      sync_svn_only_in_source(source_dir, target_dir, source_entries)
+    end    
+  end
+  
+  until target_entries.empty?
+    sync_svn_only_in_target(target_dir, target_entries)
+  end
+  
+  until source_entries.empty?
+    sync_svn_only_in_source(source_dir, target_dir, source_entries)
+  end
+end
+
+def sync_svn_only_in_target(target_dir, target_entries)
+  target_file = "#{target_dir}/#{target_entries.last}"  
+  exec_svn "delete \"#{target_file}\""
+  target_entries.pop
+end
+
+def sync_svn_only_in_source(source_dir, target_dir, source_entries)
+  source_file = "#{source_dir}/#{source_entries.last}"
+  target_file = "#{target_dir}/#{source_entries.last}"
+      
+  if File.directory?(source_file)
+    Dir.mkdir(target_file)
+    exec_svn "add \"#{target_file}\""    
+    sync_svn(source_file, target_file)
+  else
+    FileUtils.cp(source_file, target_file)
+    exec_svn "add \"#{target_file}\""
+  end
+  
+  source_entries.pop
+end
+
+def exec_svn(params)
+  puts "svn #{params}"
+  `svn #{params}`
+  raise "SVN exited with status #$?" if $? != 0  
 end
 
 task :build_tz_class do
