--- a/tzinfo/Rakefile
+++ b/tzinfo/Rakefile
@@ -28,7 +28,7 @@ SPEC = Gem::Specification.new do |s|
   s.name = "tzinfo"
   s.version = PKG_VERSION
   s.author = "Philip Ross"
-  s.email = "philip@ross.org.uk"
+  s.email = "phil.ross@gmail.com"
   s.homepage = "http://tzinfo.rubyforge.org/"
   s.platform = Gem::Platform::RUBY
   s.summary = "Daylight-savings aware timezone library"  
