List test files in test_files instead of files in the gem spec.

--- a/tzinfo/Rakefile
+++ b/tzinfo/Rakefile
@@ -23,9 +23,9 @@ PKG_FILES = FileList[
   'Rakefile',
   'README',
   'bin/**/*',
-  'lib/**/*',
-  'test/**/*'
-]
+  'lib/**/*'
+].delete_if {|f| f.include?('.svn')}
+PKG_TEST_FILES = FileList['test/**/*'].delete_if {|f| f.include?('.svn')}
 
 RDOC_OPTIONS = %w[--exclude definitions --exclude indexes]
 RDOC_EXTRA_FILES = %w[README CHANGES]
@@ -41,9 +41,8 @@ SPEC = Gem::Specification.new do |s|
   s.platform = Gem::Platform::RUBY
   s.summary = "Daylight-savings aware timezone library"  
   s.description = "TZInfo is a Ruby library that uses the standard tz (Olson) database to provide daylight savings aware transformations between times in different time zones."
-  s.files = PKG_FILES.delete_if do |item|
-    item.include?(".svn")
-  end
+  s.files = PKG_FILES
+  s.test_files = PKG_TEST_FILES
   s.require_path = "lib"
   s.has_rdoc = true
   s.extra_rdoc_files = RDOC_EXTRA_FILES
