--- a/tzinfo/Rakefile
+++ b/tzinfo/Rakefile
@@ -61,7 +61,7 @@ SPEC = Gem::Specification.new do |s|
   s.version = PKG_VERSION
   s.author = "Philip Ross"
   s.email = "phil.ross@gmail.com"
-  s.homepage = "http://tzinfo.rubyforge.org/"
+  s.homepage = "http://tzinfo.github.io"
   s.platform = Gem::Platform::RUBY
   s.summary = "Daylight-savings aware timezone library"  
   s.description = "TZInfo is a Ruby library that uses the standard tz (Olson) database to provide daylight savings aware transformations between times in different time zones."
