--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,8 @@ matrix:
   allow_failures:
     - rvm: ruby-head
     - rvm: jruby-head
+before_install:
+  - gem update bundler
+  - bundle --version
+  - gem update --system 2.1.11
+  - gem --version
