--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,10 @@ rvm:
   - ruby-head
   - jruby-18mode
   - jruby-19mode
-  - jruby-9.0.4.0
+  - jruby-9.0.5.0
   - jruby-head
   - rbx-2
+  - rbx-3
   - ree
 matrix:
   allow_failures:
