--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,15 @@ cache: bundler
 rvm:
   - 1.9.3-p551
   - 2.0.0-p648
-  - 2.1.8
-  - 2.2.4
-  - 2.3.0
+  - 2.1.10
+  - 2.2.5
+  - 2.3.1
   - ruby-head
   - jruby-19mode
-  - jruby-9.0.5.0
+  - jruby-9.1.0.0
   - jruby-head
-  - rbx-2
+  - rbx-2.71828182
+  - rbx-3.30
 matrix:
   allow_failures:
     - rvm: ruby-head
