--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: ruby
-sudo: false
+sudo: required
+dist: trusty
 before_script:
   - bundle update
 cache: bundler
@@ -14,7 +15,7 @@ rvm:
   - jruby-9.1.5.0
   - jruby-head
   - rbx-2.71828182
-  - rbx-3.29
+  - rbx-3.60
 matrix:
   allow_failures:
     - rvm: ruby-head
