Install and start haveged to prevent hanging JRuby installs.
https://github.com/jruby/jruby/wiki/FAQs#why-is-jruby-so-slow-to-install-via-rvm

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: ruby
 sudo: required
 dist: trusty
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y haveged
+  - sudo service haveged start
 before_script:
   - bundle update
 cache: bundler
