--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,24 @@
 language: ruby
+sudo: false
+before_script:
+  - bundle update
+cache: bundler
 rvm:
-  - 1.8.7
-  - 1.9.2
-  - 1.9.3
-  - 2.0.0
-  - 2.1
+  - 1.9.3-p551
+  - 2.0.0-p648
+  - 2.1.10
+  - 2.2.6
+  - 2.3.3
+  - 2.4.0
   - ruby-head
-  - jruby-18mode
-  - jruby-19mode
+  - jruby-1.7.26
+  - jruby-9.1.8.0
   - jruby-head
-  - rbx-2
-  - ree
+  - rbx-2.71828182
+  - rbx-3.29
 matrix:
   allow_failures:
     - rvm: ruby-head
     - rvm: jruby-head
+    - rvm: rbx-2.71828182
+    - rvm: rbx-3.29
