--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ before_script:
   - bundle update
 cache: bundler
 rvm:
+  - 1.8.7-head
+  - 1.9.2-p330
   - 1.9.3-p551
   - 2.0.0-p648
   - 2.1.10
@@ -11,11 +13,14 @@ rvm:
   - 2.3.3
   - 2.4.0
   - ruby-head
+  - jruby-18mode
+  - jruby-19mode
   - jruby-1.7.26
   - jruby-9.1.8.0
   - jruby-head
   - rbx-2.71828182
   - rbx-3.29
+  - ree
 matrix:
   allow_failures:
     - rvm: ruby-head
