Update bundler before installing gems.
Ruby 1.9.3-p551 on Travis CI includes an ancient version of bundler
(v1.7.6) that is not compatible with new versions of RubyGems. This
causes an 'undefined method `spec' for nil:NilClass' error (see
https://travis-ci.org/tzinfo/tzinfo/jobs/272252812).

(cherry picked from commit ba1fb981b959e5e7f70a53e2f3067695b5acbe4a)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: ruby
 dist: trusty
 sudo: false
+before_install:
+  - gem update bundler
 before_script:
   - bundle update
 cache: bundler
