--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 dist: trusty
 sudo: false
 before_install:
-  - '[[ $TRAVIS_RUBY_VERSION = rbx-3.86 ]] && gem update --system 2.6.14'
+  - if [[ $TRAVIS_RUBY_VERSION = rbx-3.86 ]]; then gem update --system 2.6.14; fi
   - gem update bundler
 before_script:
   - bundle update
