--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: ruby
 dist: trusty
 sudo: false
 before_install:
+  - gem update --system
   - gem update bundler
 before_script:
   - bundle update
