--- a/.editorconfig
+++ b/.editorconfig
@@ -8,5 +8,5 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[test/tzinfo-data]
+[test/tzinfo-data[12]/**/*]
 trim_trailing_whitespace = false
