gem install bundler to try and resolve an error running rake.
See https://travis-ci.org/tzinfo/tzinfo/jobs/360443100#L522

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: trusty
 sudo: false
 before_install:
   - gem update --system
-  - gem update bundler
+  - gem install bundler
 before_script:
   - bundle update
 cache: bundler
