Fix `gem update --system` failures on Ruby < 2.3.
https://travis-ci.org/tzinfo/tzinfo/jobs/471144485

RubyGems 3.0.0 requires at least Ruby 2.3.0. `gem update --system` will
fail to update on older Ruby versions.

Use a supported RubyGems version for older Ruby versions.

Use --conservative to prevent unnecessary installs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: ruby
 dist: trusty
 before_install:
-  - gem update --system
-  - gem install bundler
+  - if [[ $TRAVIS_RUBY_VERSION =~ ^(1|2\.[012]|jruby-1)\. ]]; then gem install 'rubygems-update: ~> 2.7' --no-document --conservative && update_rubygems; else gem update --system --conservative; fi
+  - gem install bundler --conservative
 before_script:
   - bundle update
 cache: bundler
