Fix erroneous 'wrong number of arguments' errors on JRuby 9.0.5.0.
Resolves #114.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -57,6 +57,9 @@ environment:
       JRUBY_VERSION: 1.7.27
 
     - RUBY_ENGINE: jruby
+      JRUBY_VERSION: 9.0.5.0
+
+    - RUBY_ENGINE: jruby
       JRUBY_VERSION: 9.1.17.0
 
     - RUBY_ENGINE: jruby
