--- a/appveyor.yml
+++ b/appveyor.yml
@@ -55,9 +55,11 @@ environment:
 
     - RUBY_ENGINE: jruby
       JRUBY_VERSION: 1.7.27
+      JRUBY_BUNDLER_VERSION: "~> 1.17"
 
     - RUBY_ENGINE: jruby
       JRUBY_VERSION: 9.0.5.0
+      JRUBY_BUNDLER_VERSION: "~> 1.17"
 
     - RUBY_ENGINE: jruby
       JRUBY_VERSION: 9.1.17.0
@@ -70,8 +72,8 @@ install:
   - if %RUBY_ENGINE%==jruby appveyor DownloadFile https://repo1.maven.org/maven2/org/jruby/jruby-dist/%JRUBY_VERSION%/jruby-dist-%JRUBY_VERSION%-bin.zip -FileName vendor\jruby-dist-%JRUBY_VERSION%-bin.zip
   - if %RUBY_ENGINE%==jruby 7z x vendor\jruby-dist-%JRUBY_VERSION%-bin.zip -ovendor -y
   - if %RUBY_ENGINE%==jruby set PATH=C:\projects\tzinfo\vendor\jruby-%JRUBY_VERSION%\bin;%PATH%
-  - if %RUBY_ENGINE%==jruby if "%JRUBY_VERSION:~0,2%"=="1." gem install bundler --version "~> 1.17"
-  - if %RUBY_ENGINE%==jruby if not "%JRUBY_VERSION:~0,2%"=="1." gem install bundler
+  - if %RUBY_ENGINE%==jruby if defined JRUBY_BUNDLER_VERSION gem install bundler --version "%JRUBY_BUNDLER_VERSION%"
+  - if %RUBY_ENGINE%==jruby if not defined JRUBY_BUNDLER_VERSION gem install bundler
   - if v%RUBY_VERSION%==v193 appveyor DownloadFile https://github.com/philr/rubyinstaller/releases/download/1.9.3-p551-openssl-tls-1.1-1.2/ruby-1.9.3-p551-i386-mingw32.7z -FileName vendor\ruby-1.9.3-p551-i386-mingw32.7z
   - if v%RUBY_VERSION%==v193 7z e vendor\ruby-1.9.3-p551-i386-mingw32.7z -ovendor ruby-1.9.3-p551-i386-mingw32\bin\libeay32.dll ruby-1.9.3-p551-i386-mingw32\bin\ssleay32.dll ruby-1.9.3-p551-i386-mingw32\lib\ruby\1.9.1\i386-mingw32\openssl.so ruby-1.9.3-p551-i386-mingw32\lib\ruby\1.9.1\rubygems\ssl_certs\ca-bundle.pem
   - if v%RUBY_VERSION%==v193 copy /Y vendor\*eay32.dll C:\Ruby193\bin
