--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: ruby
 dist: trusty
 before_install:
-  - if [[ $TRAVIS_RUBY_VERSION =~ ^(1|2\.[012]|jruby-(1|9\.0))\. ]]; then gem install rubygems-update --version '~> 2.7' --no-document && update_rubygems; elif [[ ! $TRAVIS_RUBY_VERSION =~ ^truffleruby- ]]; then gem update --system; fi
+  - if [[ $TRAVIS_RUBY_VERSION =~ ^(1|2\.[012]|jruby-(1|9\.0))\. ]]; then gem install rubygems-update --version '~> 2.7' --no-document && update_rubygems; elif [[ ! $TRAVIS_RUBY_VERSION =~ ^truffleruby- ]]; then gem update --system --no-document; fi
   - gem --version
-  - if [[ $TRAVIS_RUBY_VERSION =~ ^(1|2\.[012]|jruby-(1|9\.0))\. ]]; then gem install bundler --version '~> 1.17'; else gem install bundler; fi
+  - if [[ $TRAVIS_RUBY_VERSION =~ ^(1|2\.[012]|jruby-(1|9\.0))\. ]]; then gem install bundler --version '~> 1.17' --no-document; else gem install bundler --no-document; fi
   - bundle --version
 before_script:
   - bundle update
@@ -25,7 +25,7 @@ rvm:
   - jruby-1.7.27
   - jruby-9.0.5.0
   - jruby-9.1.17.0
-  - jruby-9.2.9.0
+  - jruby-9.2.10.0
   - jruby-head
   - rbx-3.107
   - truffleruby-20.0.0
