Update to JRuby 9.2.11.0.
Add --no-document to fix hangs when updating RubyGems (and improve test
performance).

Remove deprecated options set by Travis CI from JRUBY_OPTS.

Travis CI sets the --client option (although the documentation says
--server is set).

Using the --client, --server or --noclient options will cause the jruby
command (in 9.2+) to output a warning and break the sub-process tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@ language: ruby
 dist: trusty
 sudo: false
 before_install:
-  - if [[ $TRAVIS_RUBY_VERSION =~ ^((1|2\.[012]|jruby-(1|9\.0))\.|ree$) ]]; then gem install rubygems-update --version '~> 2.7' --no-document && update_rubygems; else gem update --system; fi
+  - if [[ $TRAVIS_RUBY_VERSION =~ ^jruby- && ! $TRAVIS_RUBY_VERSION =~ ^jruby-(1|9\.[01]\.) ]]; then export JRUBY_OPTS=`echo "$JRUBY_OPTS" | sed -E -e 's/--((no)?client|server)//g'`; fi
+  - if [[ $TRAVIS_RUBY_VERSION =~ ^jruby- ]]; then echo "JRUBY_OPTS=$JRUBY_OPTS"; fi
+  - if [[ $TRAVIS_RUBY_VERSION =~ ^((1|2\.[012]|jruby-(1|9\.0))\.|ree$) ]]; then gem install rubygems-update --version '~> 2.7' --no-document && update_rubygems; else gem update --system --no-document; fi
   - gem --version
-  - if [[ $TRAVIS_RUBY_VERSION =~ ^((1|2\.[012]|jruby-(1|9\.0))\.|ree$) ]]; then gem install bundler --version '~> 1.17'; else gem install bundler; fi
+  - if [[ $TRAVIS_RUBY_VERSION =~ ^((1|2\.[012]|jruby-(1|9\.0))\.|ree$) ]]; then gem install bundler --version '~> 1.17' --no-document; else gem install bundler --no-document; fi
   - bundle --version
 before_script:
   - bundle update
@@ -29,7 +31,7 @@ rvm:
   - jruby-1.7.27
   - jruby-9.0.5.0
   - jruby-9.1.17.0
-  - jruby-9.2.9.0
+  - jruby-9.2.11.0
   - jruby-head
   - rbx-2.71828182
   - rbx-3.107
