--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,6 +53,12 @@ environment:
     - RUBY_ENGINE: ruby
       RUBY_VERSION: 26-x64
 
+    - RUBY_ENGINE: ruby
+      RUBY_VERSION: 27
+
+    - RUBY_ENGINE: ruby
+      RUBY_VERSION: 27-x64
+
     - RUBY_ENGINE: jruby
       JRUBY_VERSION: 1.7.27
       JRUBY_BUNDLER_VERSION: "~> 1.17"
