--- a/.travis.yml
+++ b/.travis.yml
@@ -53,5 +53,9 @@ jobs:
     - rvm: ree
       dist: trusty
   allow_failures:
+    - rvm: 1.8.7-head
+    - rvm: 1.9.2-p330
     - rvm: ruby-head
+    - rvm: jruby-9.0.5.0
     - rvm: jruby-head
+    - rvm: ree
