Add jruby-9.0.5.0 to allow failures.
JRuby 9.0.5.0 can no longer connect to https://rubygems.org, failing to establish a TLS connection:

https://travis-ci.com/github/tzinfo/tzinfo/jobs/459919420

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,5 +48,6 @@ jobs:
       dist: focal
   allow_failures:
     - rvm: ruby-head
+    - rvm: jruby-9.0.5.0
     - rvm: jruby-head
     - rvm: truffleruby-20.3.0
